kubernetes/arr/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: sonarr
    protocol: TCP
    port: 8989
    targetPort: 8989
  - name: exportarr
    protocol: TCP
    port: 9707
    targetPort: 9707
