kubernetes/arr/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - sonarr.slfhst.io
    secretName: sonarr-cert-prod
  rules:
  - host: sonarr.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              name: sonarr
